--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "build": "vite build",
     "compile:sass": "sass src/scss/main.scss src/style.css",
     "watch:sass": "sass src/scss/main.scss src/style.css --watch",
-    "start": "npm-run-all --parallel dev watch:sass"
+    "start": "npm-run-all --parallel dev watch:sass",
+
+    "devserver": "live-server",
+    "start:css": "npm-run-all --parallel devserver watch:sass",
+    "concat:css": "concat -o css/style.concat.css css/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
+    "compress:css": "sass <css/style.prefix.css> [css/style.css] compressed",
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
