--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "compile:sass": "sass src/scss/main.scss src/style.css",
-    "watch:sass": "sass src/scss/main.scss src/style.css --watch",
+    "compile:sass": "sass src/scss/main.scss src/css/style.comp.css",
+    "watch:sass": "sass src/scss/main.scss src/css/style.css --watch",
     "start": "npm-run-all --parallel dev watch:sass",
-
     "devserver": "live-server",
     "start:css": "npm-run-all --parallel devserver watch:sass",
-    "concat:css": "concat -o css/style.concat.css css/style.comp.css",
-    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
-    "compress:css": "sass <css/style.prefix.css> [css/style.css] compressed",
+    "concat:css": "concat -o src/css/style.concat.css src/css/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' src/css/style.concat.css -o src/css/style.prefix.css",
+    "compress:css": "sass src/css/style.prefix.css src/css/style.css --style compressed",
     "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "autoprefixer": "^10.4.14",
+    "concat": "^1.0.3",
     "hexo-server": "^3.0.0",
+    "postcss-cli": "^10.1.0",
     "sass": "^1.62.0",
     "vue": "^3.2.47"
   },
